# youtube-downloader

./: .gitignore  README.md  download - Shortcut.lnk  main.py  pyproject.toml  pytoexe.json  requirement.txt  requirements.txt
download/: Yuki ni Saku Hana - Hanazawa Kana.m4a
logs/: log_04-12-2025  log_23-10-2025  log_url-e  log_video-url-check
